Correct linter errors

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 .body {
-  background-color: #f4f3f4
+  background-color: #f4f3f4;
 }
 
 #container {
@@ -70,4 +70,3 @@ li {
   padding-top: 15px;
   padding-bottom: 15px;
 }
-
