--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,7 @@
   font-style: italic;
   border: none;
   outline: none;
+  width: 90%;
 }
 
 .input-container {
@@ -69,4 +70,17 @@ li {
   border: none;
   padding-top: 15px;
   padding-bottom: 15px;
+}
+
+.delete-icon {
+  display: none;
+}
+
+.ellipsis-icon:hover + .delete-icon {
+  display: inline;
+}
+
+.edit-input {
+  outline: none;
+  border: none;
 }
